--- a/info.css
+++ b/info.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
+
 body {
-    background-color:aqua;
+    background-color:lightgreen; 
+    font-family: "Rowdies", sans-serif;
+
+}
+#heading {
+    align-items: center;
+
+}
+h1 {
+    text-align: center;
+}
+li {
+    border-radius: 10px;
+    background-color: darkgreen;
+    color: white;
+    margin: 20px;
+    padding: 20px;
+}
+
+#description {
+    margin: 10px;
 }
