--- a/info.css
+++ b/info.css
@@ -1,3 +1,14 @@
 body {
     background-color:aqua;
+    font-family: sans-serif;
+    background-image: url(Images/360_F_270252931_bHV05iyLL4pZTnzH5S78Pc8dMpXh1mMS.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#mainbody {
+   background-color: lightblue;
+   padding: 5px 20px 20px 20px;
+   border-radius: 4px;
+   border-style: solid;
 }
