--- a/info.css
+++ b/info.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
+
 body {
-    background-color:aqua;
-    font-family: sans-serif;
     background-image: url(Images/360_F_270252931_bHV05iyLL4pZTnzH5S78Pc8dMpXh1mMS.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,4 +11,28 @@ body {
    padding: 5px 20px 20px 20px;
    border-radius: 4px;
    border-style: solid;
+}
+
+body {
+    background-color:lightgreen; 
+    font-family: "Rowdies", sans-serif;
+
+}
+#heading {
+    align-items: center;
+
+}
+h1 {
+    text-align: center;
+}
+li {
+    border-radius: 10px;
+    background-color: darkgreen;
+    color: white;
+    margin: 20px;
+    padding: 20px;
+}
+
+#description {
+    margin: 10px;
 }
